src/test/ui/conditional-compilation/cfg-attr-crate-2.stderr
error[E0658]: no_core is experimental
  --> $DIR/cfg-attr-crate-2.rs:6:21
   |
LL | #![cfg_attr(broken, no_core)]
   |                     ^^^^^^^
   |
   = note: for more information, see tracking issue #29639
   = help: add #![feature(no_core)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
